--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ typeof(`[`)
 # First-class functions
 - R functions are objects in their own right
 - No special syntax for defining and naming a function
-- Create a function object using `function` and bind it to a name with `&lt;-`
-- Binding step is not necessary
+- Typically, create a function object using `function` and bind it to a name with `&lt;-`
+  - Binding step is not necessary
 
 ```r
 lapply(mtcars, function(x) length(unique(x)))
@@ -139,6 +139,7 @@ class: center, middle
 .footnote[Lexical scoping]
 ---
 ## Name masking
+.footnote[Lexical scoping]
 .pull-left[Names defined within the function mask names outside the function 
 
 ```r
@@ -171,13 +172,12 @@ y
 
 --
 The same rules apply if a function is defined inside another function. 
---
-  
-.footnote[Lexical scoping]
+
 ---
 #Functions vs variables
-
-When you use a name in a function call, R ignores non-function objects when looking for that value.
+- Since functions are objects, scoping rules also apply to functions
+- What happens if you use the same name for a function and non-function object?
+  - R ignores non-function objects when looking for that value
 
 
 ```r
@@ -189,13 +189,17 @@ g10 &lt;- function() {
 g10()
 #&gt; [1] 110
 ```
-  
+ 
+ !!! Using same name for different things is a bad idea!!!   
 .footnote[Lexical scoping]
 ???
+g09 takes two different values
 best to not use same names (caution from Hadley) but knowing this can help us troubleshoot
+
 ---
 # A fresh start
-Every time a function is called a new environment is created to host its execution. 
+- Every time a function is called a new environment is created to host its execution. 
+- Each invocation is completely independent
 
 ```r
 g11 &lt;- function() {
@@ -211,11 +215,11 @@ g11()
 g11()
 ```
 
-Each run is independent of other runs
 
 .footnote[Lexical scoping]
 ---
 #Dynamic Look up
+.footnote[Lexical scoping]
 - R looks for values when the function is run, not when the function is created. 
 
 
@@ -230,14 +234,16 @@ x &lt;- 20
 g12()
 #&gt; [1] 21
 ```
-
+--
 - If there is a a spelling mistake in the code, you won’t get an error message when you create the function
+- Use `codetools` to detect the external dependencies
+--
 
 ```r
 codetools::findGlobals(g12)
 #&gt; [1] "+" "x"
 ```
-.footnote[Lexical scoping]
+
 ---
 class: middle, center
 # Lazy evaluation
@@ -255,27 +261,39 @@ h01(stop("This is an error!"))
 
 ---
 # Promises
-### Lazy evaluation is powered by Promises : a data structure 
-
+#### Lazy evaluation is powered by "promise": a data structure 
 A promise has three components
-- An expression, like `x + y`, which gives rise to the delayed computation
-- An environment where the expression should be evaluated
-- A value, which is computed and cached the first time a promise is accessed when the expression is evaluated in the specified environment
+- **An expression**, like `x + y`, which gives rise to the delayed computation
+- **An environment** where the expression should be evaluated
+- **A value**, which is computed and cached the first time a promise is accessed when the expression is evaluated in the specified environment
+
+```r
+double &lt;- function(x) { 
+  message("Calculating...")
+  x * 2
+}
+h03 &lt;- function(x) {
+  c(x, x)
+}
+h03(double(20))
+&gt; Calculating...
+&gt; [1] 40 40
+```
 
 .footnote[Lazy evaluation]
 ---
 # Default arguments
 Default arguments can be defined in terms of
 - other arguments
-- variables defined later in the function
-!!! Not recommended because
-- makes the code harder to understand
-- need to know the exact order of evaluation
+- variables defined later in the function  
+  - !!! Not recommended because
+      - makes the code harder to understand
+      - need to know the exact order of evaluation
 
 .footnote[Lazy evaluation]
 ---
 # Missing arguments
-you can use `missing()` to see if the argument's value comes from the user or defualt
+you can use `missing()` to see if the argument's value comes from the user or default
 
 ```r
 h06 &lt;- function(x = 10) {
@@ -349,10 +367,13 @@ j02 &lt;- function(x) {
 - The most common function that returns invisibly is `&lt;-`
 - Can make invisible by applying `invisible()` to the last value
 
+
+
 ```r
 j04 &lt;- function() invisible(1)
 j04()
 ```
+- Verify if the value exists by using `print()` or wrapping in `()`
 
 
 ```r
@@ -434,27 +455,10 @@ for(i in 1:10) print(i)
 # Using prefix form
 - By position, like help(mean).
 - Partial matching, like help(top = mean).
-- By name, like help(topic = mean)
+- By name, like help(topic = mean)  
 !!! Use positional matching only for the first one or two arguments. Avoid using positional matching for less commonly used arguments, and **never use partial matching**.!!!
 
 
-```r
-add &lt;- function(x, y) x + y
-lapply(list(1:3, 4:5), add, 3)
-&gt; [[1]]
-&gt; [1] 4 5 6
-&gt; [[2]]
-&gt; [1] 7 8
-```
-
-
-```r
-lapply(list(1:3, 4:5), `+`, 3)
-&gt; [[1]]
-&gt; [1] 4 5 6
-&gt; [[2]]
-&gt; [1] 7 8
-```
 
 .footnote[Function forms]
 ???
@@ -470,6 +474,8 @@ Use positional matching only for the first one or two arguments; they will be th
 "new " %+% "string"
 #&gt; [1] "new string"
 ```
+- names can contain any sequence of characters except `%`
+
 
 .footnote[Function forms]
 
@@ -478,13 +484,21 @@ Use positional matching only for the first one or two arguments; they will be th
 - Functions that replace values by assignment, like `names(df) &lt;- c("a", "b", "c")`
 - They have the special name `xxx&lt;-`, must have arguments named `x` and value, and must return the modified object
 
+
+```r
+`second&lt;-` &lt;- function(x, value) {
+  x[2] &lt;- value
+  x
+}
+```
+
+
 .footnote[Function forms]
 ---
 # Special forms
 - They don't have a consistent form like `[[`, `if`, and `for`
-- Knowing the name of the function that underlies a special form is useful for getting documentation: 
-  - ?( is a syntax error; ?`(` will give you the documentation for parentheses.
-- All special forms are implemented as primitive functions; this means printing these functions is not informative:
+- Knowing the name of the function that underlies a special form is useful for getting documentation
+- All special forms are implemented as primitive functions; this means printing these functions is not informative
 
 
 ```r
